# aidd

./: .dockerignore  .gitignore  CNAME  CONTRIBUTING.md  HISTORY.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: docker-build-test.yml  docker-release.yml  pages.yml  ubuntu-tests.yml  windows-tests.yml
benchmark/: Dockerfile  README.md  benchmark.py  docker.sh  docker_build.sh  over_time.py  plots.py  refactor_tools.py  rungrid.py  swe-bench-lite.txt  swe-bench.txt  swe_bench.py  test_benchmark.py
docker/: Dockerfile
hclcode/: __init__.py  args.py  args_formatter.py  commands.py  gui.py  help.py  history.py  io.py  linter.py  llm.py  main.py  mdstream.py  models.py  repo.py  repomap.py  report.py  scrape.py  sendchat.py  urls.py  utils.py  versioncheck.py  voice.py
hclcode/coders/: architect_coder.py  base_coder.py  editblock_coder.py  help_coder.py  help_prompts.py  search_replace.py  single_wholefile_func_coder.py  wholefile_coder.py  wholefile_func_coder.py
hclcode/queries/: README.md
hclcode/website/: HISTORY.md  _config.yml  index.md
hclcode/website/_data/: architect.yml  blame.yml  code-in-json.yml  edit_leaderboard.yml  o1_results.yml  refactor_leaderboard.yml  sonnet-fine.yml
hclcode/website/_includes/: blame.md  env-keys-tip.md  get-started.md  head_custom.html  help-tip.md  help.md  model-warnings.md  nav_footer_custom.html  python-m-aider.md  replit-pipx.md  special-keys.md  (+2 more)
scripts/: blame.py  issues.py  jekyll_run.sh  update-blame.sh  update-docs.sh  versionbump.py  yank-old-versions.py
tests/basic/: test_coder.py  test_commands.py  test_editblock.py  test_find_or_blocks.py  test_history.py  test_io.py  test_linter.py  test_main.py  test_models.py  test_repo.py  test_repomap.py  test_run_cmd.py  test_sanity_check_repo.py  test_scripting.py  test_sendchat.py  test_special.py  test_udiff.py  test_urls.py  test_wholefile.py
tests/browser/: test_browser.py
tests/fixtures/: chat-history-search-replace-gold.txt  chat-history.md
tests/help/: test_help.py
tests/scrape/: test_scrape.py
(+92 files in other folders)
