# [[[cog
# from hclcode.help_pats import exclude_website_pats
# ]]]
# [[[end]]]

[project]
name = "hclcode-chat"
description = "hclcode is AI pair programming in your terminal"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Software Development",
]
requires-python = ">=3.9,<3.13"
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.urls]
Homepage = "https://github.com/hclcode-AI/hclcode"

[project.scripts]
hclcode = "hclcode.main:main"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/requirements-dev.txt" }
help = { file = "requirements/requirements-help.txt" }
browser = { file = "requirements/requirements-browser.txt" }
playwright = { file = "requirements/requirements-playwright.txt" }

[tool.setuptools.packages.find]
include = ["hclcode*", "hclcode.website"]

[tool.setuptools.package-data]
"hclcode" = ["queries/*.scm"]
"hclcode.website" = ["**/*.md"]

[tool.setuptools.exclude-package-data]
"hclcode.website" = [
# [[[cog
# cog.out("\n".join(f'    "{pat}",' for pat in exclude_website_pats))
# ]]]
"examples/**",
"_posts/**",
"HISTORY.md",
"docs/benchmarks*md",
"docs/ctags.md",
"docs/unified-diffs.md",
"docs/leaderboards/index.md",
"assets/**",
# [[[end]]]
]

[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "hclcode/__version__.py"

[tool.codespell]
skip = "*.svg,Gemfile.lock"
write-changes = true
